# reels-vault

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  requirements.txt  setup.sh
assets/: README.md  create-gifs.sh
mcp/: server.py
mcp_server/: server.py
prompts/: analyze_reel.md  extract_frameworks.md
reels_vault/: cli.py  config.py  connect.py  extract.py  server.py
scripts/: config.py  connect.py  extract_reel.py
skills/reels-vault/: SKILL.md  setup.sh
skills/reels-vault/scripts/: extract_reel.py
tests/: test_output.py
vault-template/: Index.md
vault-template/creators/: Alex Hormozi.md  Creator Profiles.md  Creator Template.md
vault-template/extracts/: Extracts.md
vault-template/recipes/: Recipe Book.md
vault-template/topics/: AI & Tools.md  Content Frameworks & Systems.md  Copywriting & Ads.md  Distribution & Growth.md  Editing & Production.md  Hooks & Openings.md  Marketing & Strategy.md  Scripting & Storytelling.md  Short-Form Video.md  Thumbnails & Visuals.md  YouTube Strategy.md
