[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reels-vault"
version = "0.1.0"
description = "Extract transcripts and metadata from Instagram reels into an Obsidian knowledge base"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.4.9",
    "openai-whisper>=20240927",
    "shazamio>=0.7.0",
    "playwright>=1.60.0",
    "mcp>=1.0",
]

[project.scripts]
reels-vault = "reels_vault.cli:main"
reels-vault-connect = "reels_vault.connect:main"
reels-vault-mcp = "reels_vault.server:run"

[tool.setuptools.packages.find]
include = ["reels_vault*"]
